add live chatbot, edit ourJourney, topNav navbar color and add flipcard

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script
+  src="https://app.livechatai.com/embed.js"
+  data-id="cmfocl6m20001ju043vxuvmhs"
+  async defer>
+</script>
   </body>
 </html>
