--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <script
+    <!-- <script
   src="https://app.livechatai.com/embed.js"
   data-id="cmfocl6m20001ju043vxuvmhs"
   async defer>
-</script>
+</script> -->
   </body>
 </html>
